implement sidebar navigation

--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,29 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.sidebar-item { position: relative; }
+
+.sidebar-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  background-color: #d80725;
+  width: 150%;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.sidebar-item.active::after {
+  right: 0;
+  opacity: 1;
+}
+
+.sidebar-item a { transition: 0.5s; }
+
+.sidebar-item.active a { padding-inline-start: 20px; }
